添加jsp，jstl，tomcat依赖包

--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,26 @@
         </dependency>
         <!-- ehcache end -->
 
+
+        <!--jsp,jstl,taglib start-->
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp.jstl</groupId>
+            <artifactId>jstl-api</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.taglibs</groupId>
+            <artifactId>taglibs-standard-impl</artifactId>
+            <version>1.2.5</version>
+        </dependency>
+        <!--jsp,jstl,taglib end-->
+
+
     </dependencies>
 
     <build>
